# ppp

./: .gitignore  LICENSE  README.md  ppp.cabal  ppp.hs  stack.yaml
Docs/: Extensions.md  Macros.md  README.md  Reference.md  Report.md
PpP/: Err.hs  Filter.hs  Language.hs  PrePreProcess.hs  Renderer.hs  Shared.hs
PpP/Filter/: Err.hs  Figure.hs  Float.hs  LinksAsNotes.hs  Multicol.hs  NumberRef.hs  Reference.hs  ToTex.hs  Wikiref.hs
PpP/Renderer/: Academic.hs  CV.hs  Report.hs  Shared.hs
csl/: ieee.csl  wikiref.csl
data/: ieee.csl  template.tex
docs/: Boxes.md  Macros.md  NumberRef.md  README.md
src/: BlockWriter.hs  Emb.hs  Main.hs  PostProcess.hs  PreProcess.hs  Reader.hs  Writer.hs
src/Filter/: Abstract.hs  Attr.hs  Bib.hs  Float.hs  Hyperref.hs  LinksAsNotes.hs  Macros.hs  MultiBib.hs  Multicol.hs  NumberRef.hs  WrapFloat.hs
test/: Bib.bib  Gen.md  Multicol.md  Ref.md  Test.md  Units.md
test/Boxes/: Figures.md  Float.md  Multi.md  Other.md  Programs.md  Tables.md  Wrap.md
tex/: article.tex  cv.tex  report.tex
