name:                ppp
version:             0.3.2
homepage:            https://github.com/Thhethssmuz/ppp
license:             MIT
license-file:        LICENSE
author:              Svein Inge Albrigtsen
maintainer:          thhethssmuz@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.22
-- data-files:          csl/*.csl
--                      tex/*.tex

executable ppp
  main-is:             Main.hs

  build-depends:       base >= 4 && < 5,
                       bytestring >= 0.10 && < 0.11,
                       containers >= 0.5 && < 0.6,
                       directory >= 1.3 && < 1.4,
                       file-embed >= 0.0 && < 0.1,
                       filepath >= 1.4 && < 1.5,
                       optparse-applicative >= 0.14 && < 0.15,
                       pandoc >= 2.0 && < 2.1,
                       pandoc-citeproc >= 0.12 && < 0.13,
                       pandoc-types >= 1.17 && < 1.18,
                       skylighting >= 0.5 && < 0.6,
                       split > 0.2 && < 0.3,
                       text > 1.2 && < 1.3,
                       transformers >= 0.5 && < 0.6

  other-modules:       Paths_ppp

  default-language:    Haskell2010
  hs-source-dirs:      src
